--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,14 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  height: 80rem;
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
-  background-color: #fff;
+  background-color: #bb3131;
   flex: 0 0 82%; }
 
 .logo {
@@ -153,3 +157,19 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.side-nav__link {
+  text-decoration: none;
+  list-style: none;
+  color: #fff; }
+
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem;
+  fill: #fff; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-light-4); }
