--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -111,3 +111,30 @@
     margin-right: 1rem;
   }
 }
+
+/////////////////////////////////
+// SIDE NAVIGATION
+.side-nav {
+  &__item {
+  }
+  &__link {
+    text-decoration: none;
+    list-style: none;
+    color: #fff;
+  }
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: #fff;
+  }
+}
+
+/////////////////////////////////
+// Legal TEXT
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-light-4);
+}
