--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,6 @@ body {
   justify-content: space-between; }
 
 .hotel-view {
-  background-color: #bb3131;
   flex: 0 0 82%; }
 
 .logo {
@@ -201,3 +200,18 @@ body {
   text-align: center;
   padding: 2.5rem;
   color: var(--color-grey-light-4); }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
