--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -22,7 +22,7 @@
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  height: 80rem;
+
   flex: 0 0 18%;
   display: flex;
   flex-direction: column;
@@ -31,4 +31,25 @@
 
 .hotel-view {
   flex: 0 0 82%;
+}
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
+}
+
+.description {
+  font-size: 1.4rem;
+  background-color: #fff;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+  padding: 3rem;
+  box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+}
+
+.user-reviews {
+  background-color: cyan;
+  flex: 1;
 }
