--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -46,6 +46,9 @@ Grey dark 3: #999
 html {
   box-sizing: border-box;
   font-size: 62.5%; // 1rem=10px  10/16px
+  @media only screen and (max-width: 68.75em) /* 1200px */ {
+    font-size: 50%;
+  }
 }
 
 body {
