--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,6 +4,12 @@
   background-color: var(--color-grey-light-1);
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
+
+  @media only screen and (max-width: 75em) /* 1200px */ {
+    margin: 0;
+    max-width: 100%;
+    width: 100%;
+  }
 }
 
 .header {
@@ -18,6 +24,9 @@
 
 .content {
   display: flex;
+  @media only screen and (max-width: 56.25em) /* 900px */ {
+    flex-direction: column;
+  }
 }
 
 .sidebar {
@@ -39,6 +48,14 @@
   padding: 4.5rem;
   background-color: var(--color-grey-light-2);
   border-bottom: 1px solid var(--color-grey-light-2);
+
+  @media only screen and (max-width: 56.25em) /* 900px */ {
+    padding: 3rem;
+  }
+
+  @media only screen and (max-width: 37.5em) /* 900px */ {
+    flex-direction: column;
+  }
 }
 
 .description {
@@ -47,6 +64,13 @@
   margin-right: 4.5rem;
   padding: 3rem;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  @media only screen and (max-width: 56.25em) /* 900px */ {
+    padding: 2rem;
+    margin-right: 3;
+  }
+  @media only screen and (max-width: 37.5em) /* 900px */ {
+    margin: 1rem auto;
+  }
 }
 
 .user-reviews {
@@ -55,4 +79,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media only screen and (max-width: 37.5em) /* 900px */ {
+    margin-top: 5rem;
+    width: 50%;
+    align-items: center;
+    margin: 2rem auto;
+  }
 }
