--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -213,12 +213,22 @@
     margin-bottom: 3rem;
     padding: 2rem;
   }
+
+  @media only screen and (max-width: 37.5em) /* 600px */ {
+    flex-wrap: wrap;
+  }
+
   &__heading {
     font-size: 2.25rem;
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      font-size: 1.8rem;
+      padding: 0.8rem 1rem;
+      margin-right: auto;
+    }
   }
 
   &__stars {
@@ -237,10 +247,17 @@
     font-size: 1.2rem;
     display: flex;
     align-items: center;
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      margin-right: auto;
+    }
   }
 
   &__icon-location {
     margin-right: 0.5rem;
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      width: 3rem;
+      height: 3rem;
+    }
   }
 
   &__rating {
@@ -253,6 +270,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      margin-right: auto;
+    }
   }
 
   &__rating-average {
@@ -328,6 +348,10 @@
   border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   flex-wrap: wrap;
+  @media only screen and (max-width: 37.5em) /* 900px */ {
+    flex-wrap: nowrap;
+    flex-direction: column;
+  }
 
   &__item {
     flex: 0 0 50%;
@@ -453,6 +477,10 @@
     font-size: 2rem;
     font-weight: 300;
     margin-bottom: 2.5rem;
+    @media only screen and (max-width: 37.5em) /* 900px */ {
+      font-size: 1.8rem;
+      margin-bottom: 1.5rem;
+    }
   }
 }
 
@@ -476,6 +504,9 @@
     display: inline-block;
     padding: 2rem 7.5rem;
     transition: all 0.2s;
+    @media only screen and (max-width: 37.5em) /* 900px */ {
+      padding: 1.7rem 5rem;
+    }
   }
 
   &__invisible {
