--- a/css/style.css
+++ b/css/style.css
@@ -254,11 +254,15 @@ body {
       .side-nav__link:link, .side-nav__link:visited {
         justify-content: center;
         padding: 2rem; } }
+    @media only screen and (max-width: 37.5em) {
+      .side-nav__link:link, .side-nav__link:visited {
+        padding: 2rem 0; } }
   .side-nav__icon {
     width: 1.75rem;
     height: 1.75rem;
-    margin-right: 2rem;
-    fill: currentColor; }
+    margin-right: 0;
+    fill: currentColor;
+    margin-right: 1rem; }
 
 .legal {
   font-size: 1.2rem;
