--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -170,12 +170,16 @@
       justify-content: center;
       padding: 2rem;
     }
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      padding: 2rem 0;
+    }
   }
   &__icon {
     width: 1.75rem;
     height: 1.75rem;
-    margin-right: 2rem;
+    margin-right: 0;
     fill: currentColor;
+    margin-right: 1rem;
   }
 }
 
