--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,9 @@ body {
     height: 100%;
     display: flex;
     align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .user-nav > * {
+        padding: 0 1rem; } }
   .user-nav > *:hover {
     background-color: var(--color-grey-light-2); }
   .user-nav__icon-box {
@@ -206,7 +209,7 @@ body {
   .user-nav__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-    margin-right: 1rem; }
+    margin-right: 0.7rem; }
 
 .side-nav {
   font-size: 1.4rem;
