--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -72,6 +72,9 @@
     height: 100%;
     display: flex;
     align-items: center;
+    @media only screen and (max-width: 37.5em) /* 600px */ {
+      padding: 0 1rem;
+    }
   }
   & > *:hover {
     background-color: var(--color-grey-light-2);
@@ -105,7 +108,7 @@
   &__user-photo {
     height: 3.75rem;
     border-radius: 50%;
-    margin-right: 1rem;
+    margin-right: 0.7rem;
   }
 }
 
